syntax = "proto3";

// Job Activity History IDL
//

package com.netflix.titus;

import "netflix/titus/titus_base.proto";
import "netflix/titus/titus_job_api.proto";

option java_multiple_files = true;
option java_package = "com.netflix.titus.grpc.protogen";
option java_outer_classname = "JobActivityHistoryProto";

option go_package = "titus";

// ----------------------------------------------------------------------------
// Data model.

message JobActivityRecord {

    CallMetadata callMetadata = 1;
    Job job = 2;
    uint64 timestamp = 4;
}

message TaskActivityRecord {

    CallMetadata callMetadata = 1;
    Task task = 2;
    uint64 timestamp = 3;
}

// ----------------------------------------------------------------------------
// Service

message JobActivityQueryResult {
    repeated JobActivityRecord records = 1;
}

message TaskActivityQueryResult {
    repeated TaskActivityRecord records = 1;
}

service JobActivityService {

    /// Get all known active job records.
    rpc GetJobActivityRecords (JobId) returns (JobActivityQueryResult) {
    }

    // Get all known active task record history
    rpc GetTaskActivityRecords (TaskId) returns (TaskActivityQueryResult) {
    }
}
